--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,6 +1,4 @@
 .main {
     background-image: url(/images/background-img.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-position: 50% 65%;
 }
